--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -107,7 +107,7 @@
 		            <li class="divider"></li>
 		            <li><a href="@routes.Equipments.getEquipmentsList()">Magazyn sprzętu</a></li><!-- Displaying the courses List -->
 		            <li class="divider"></li>
-		            <li><a href="@routes.Equipments.getEquipmentsList()">Zarezerwuj sprzęt </a></li><!-- Book equipment in warehouse -->
+		            <li><a href="@routes.Equipments.makeReservation()">Zarezerwuj sprzęt </a></li><!-- Book equipment in warehouse -->
 		          </ul>
 		        </li>
 		      }
