--- a/app/views/courses/coursesList.scala.html
+++ b/app/views/courses/coursesList.scala.html
@@ -32,7 +32,7 @@
 				}
 				@for(course <- courses) {
 				<tr>
-					<td><a href="@routes.Courses.editCourse(course._id)"><b>@course.name</b></a></td>
+					<td><a rel="tooltip" title="Zmień dane kursu" href="@routes.Courses.editCourse(course._id)"><b>@course.name</b></a></td>
 
 					<td>@if((course != null) && (course.members_ids != null)){@course.members_ids.size()}</td>
 					<td>@if((course != null) && (course.meetingHistory != null)){@course.meetingHistory.size()}</td>
@@ -76,7 +76,7 @@
 	  </div>
 	</div>
 	
-	<script type="text/javascript">
+	<script>
 		$('#confirmModal').on('show.bs.modal', function(e) {
 			var courseName = $(e.relatedTarget).data('course-name');
 			var courseId = "/courses/delete/";
@@ -86,10 +86,5 @@
 		});
 	</script>
 }
-
-
-
-
-
 
 <!--  @@Author(name="Lukas Pecak") -->
