--- a/app/views/equipments/equipmentsList.scala.html
+++ b/app/views/equipments/equipmentsList.scala.html
@@ -2,82 +2,82 @@
 @import helper._
 @import helper.twitterBootstrap._
 
-
-@main(currentUser, role, "Lista użytkowników", false){
+@main(currentUser, role, "Lista sprzętu", false){
 <meta charset="UTF-8">
 	<div class="container panel panel-default">
-	<h1 align="center">Magazyn sprzętu <span class="pull-right">@if((session.get("role") == "SuperUser")){
-			<a ref="tooltip" title="Dodaj sprzętu do magazynu" href="@routes.Equipments.newEquipment()" class="btn btn-primary" >
-			<i class="glyphicon glyphicon-plus"></i> Dodaj
-		</a>}</span></span></h1>
-	<br>
-		<table class="table table-striped">
-			<thead>
-				<tr>
-					<th>Nazwa</th>
-					<th>Dostępność</th>
-					<th>Historia</th>
-					<th>Rezerwacja</th>
-					@if((session.get("role") == "SuperUser") || (session.get("role") == "WarehouseManager")){
-					<th>Zmień</th>
-					<th>Usuń</th>
-					}
-				</tr>
-			</thead>
-			<tbody>
-			@if(equipments.size() == 0){
-				<tr>
-					<td>
-						<h3>Magazyn jest pusty !</h3>
-					</td>
-				</tr>
-			}
-			@for(equipment <- equipments) {
-				<tr>
-					
-					<td><a href="@routes.Equipments.editEquipment(equipment._id)"><b>@equipment.name</b></a></td>
-					<td>
-						@if(equipment.isReserved == true){<b style="color:orange;">Zarezerwowany</b>}
-						@if(equipment.isHired == true){<b style="color:red;">Wypożyczony</b>}
-						@if(equipment.isServicing == true){<b style="color:red;">W serwisie</b>}
-						@if(equipment.isAvailable == true){<b style="color:green;">Dostępny</b>}
-					
-					</td>
-					<td>
-						@if(equipment.hireHistory != null){
-							@if(equipment.hireHistory.size() != 0){
-								@equipment.hireHistory.size()
-								} else{
-									Nowy sprzęt
-								}
-						
-						
-						}
-					</td>
-					
-					<td>
-						@if(equipment.isAvailable){
-							<a href="@routes.Equipments.bookEquipment(equipment._id)">Zarezerwuj
-						}
-					</td>
-					
-					
-					@if((session.get("role") == "SuperUser") || (session.get("role") == "WarehouseManager")){
-					<td>
-					 		<a href="@routes.Equipments.editEquipment(equipment._id)">
-							<i class="glyphicon glyphicon-pencil"></i></a>
-
-					</td>
-					<td>
-					 		<a data-toggle="modal" data-target="#confirmModal" data-equipment-id="@equipment._id" data-equipment-name="@equipment.name">
-							<i class="glyphicon glyphicon-remove"></i></a>	
-					</td>
-					}
-				</tr>
-			}
-			</tbody>
-		</table>
+		<h1 align="center">Magazyn sprzętu <span class="pull-right">@if((session.get("role") == "SuperUser")){
+				<a rel="tooltip" title="Dodaj sprzętu do magazynu" href="@routes.Equipments.newEquipment()" class="btn btn-primary" >
+				<i class="glyphicon glyphicon-plus"></i> Dodaj
+			</a>}</span></h1>
 		<br>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>Nazwa</th>
+						<th>Dostępność</th>
+						<th>Historia</th>
+						<th>Rezerwacja</th>
+						@if((session.get("role") == "SuperUser") || (session.get("role") == "WarehouseManager")){
+						<th>Zmień</th>
+						<th>Usuń</th>
+						}
+					</tr>
+				</thead>
+				<tbody>
+				@if(equipments.size() == 0){
+					<tr>
+						<td>
+							<h3>Magazyn jest pusty !</h3>
+						</td>
+					</tr>
+				}
+				@for(equipment <- equipments) {
+					<tr>
+						<td>
+							<a rel="tooltip" title="Edytuj sprzęt" href="@routes.Equipments.editEquipment(equipment._id)"><b>@equipment.name</b></a>
+						</td>
+						<td>
+							@if(equipment.isReserved == true){<b style="color:orange;">Zarezerwowany</b>}
+							@if(equipment.isHired == true){<b style="color:red;">Wypożyczony</b>}
+							@if(equipment.isServicing == true){<b style="color:red;">W serwisie</b>}
+							@if(equipment.isAvailable == true){<b style="color:green;">Dostępny</b>}
+						
+						</td>
+						<td>
+							@if(equipment.hireHistory != null){
+								@if(equipment.hireHistory.size() != 0){
+									@equipment.hireHistory.size()
+									} else{
+										Nowy sprzęt
+									}
+							
+							
+							}
+						</td>
+						
+						<td>
+							@if(equipment.isAvailable){
+								<a rel="tooltip" title="Rezerwacja sprzętu" href="@routes.Equipments.bookEquipment(equipment._id)">Zarezerwuj
+							}
+						</td>
+						
+						
+						@if((session.get("role") == "SuperUser") || (session.get("role") == "WarehouseManager")){
+						<td>
+						 		<a rel="tooltip" title="Edytuj sprzęt" href="@routes.Equipments.editEquipment(equipment._id)">
+								<i class="glyphicon glyphicon-pencil"></i></a>
+	
+						</td>
+						<td>
+						 		<a rel="tooltip" title="Usuń sprzęt" data-toggle="modal" data-target="#confirmModal" data-equipment-id="@equipment._id" data-equipment-name="@equipment.name">
+								<i class="glyphicon glyphicon-remove"></i></a>	
+						</td>
+						}
+					</tr>
+				}
+				</tbody>
+			</table>
+			<br>
 	</div>
     
     <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
@@ -96,16 +96,15 @@
 	    </div>
 	  </div>
 	</div>
-	<script type="text/javascript">
+	
+	<script>
 		$('#confirmModal').on('show.bs.modal', function(e) {
-			var equipmentName = $(e.relatedTarget).data('equipment-name');
-			var equipmentId = "/equipments/delete/";
-		    equipmentId += $(e.relatedTarget).data('equipment-id');
-		    $(e.currentTarget).find('b[id="equipmentToDelete"]').text(equipmentName);
-		    $(e.currentTarget).find('a[id="deleteLink"]').attr("href", equipmentId);
+			var equipmentName = $(e.relatedTarget).data('equipment-name')
+			var equipmentId = "/equipments/delete/"
+		    equipmentId += $(e.relatedTarget).data('equipment-id')
+		    $(e.currentTarget).find('b[id="equipmentToDelete"]').text(equipmentName)
+		    $(e.currentTarget).find('a[id="deleteLink"]').attr("href", equipmentId)
 		});
+		
 	</script>
 }
-
-
-<!--  @@Author(name="Lukas Pecak")-->
