--- a/app/views/payment/paymentsList.scala.html
+++ b/app/views/payment/paymentsList.scala.html
@@ -5,78 +5,32 @@
 
 @main(currentUser, role, "Lista płatności", false){
 <meta charset="UTF-8">
-	<div class="container panel panel-default">
-	<h1 align="center">Lista płatności <span class="pull-right">@if((session.get("role") == "SuperUser") || (session.get("role") == "PaymentManager")){
-			<a rel="tooltip" title="Zarejestruj płatność" href="@routes.Payments.createPayment()" class="btn btn-primary" >
-			<i class="glyphicon glyphicon-plus"></i> Dodaj
-		</a>}</span></h1>
-	<br>
-		<table class="table table-striped">
-			<thead>
-				<tr>
-					<th>Tytuł</th>
-					<th>Kwota</th>
-					<th>Status</th>
-					<th>Użytkownik</th>
-					@if((session.get("role") == "SuperUser") || (session.get("role") == "PaymentManager")){
-					<th>Zmień</th>
-					<th>Usuń</th>
-					}
-				</tr>
-			</thead>
-			<tbody>
-			@if(payments.size() == 0){
-				<tr>
-					<td>
-						<h3>Brak zarejestrowanych płatności !</h3>
-					</td>
-				</tr>
-			}
-			@for(payment <- payments) {
-				<tr>
-					<td><a rel="tooltip" title="Edytuj płatność" href="@routes.Payments.editPayment(payment._id)"><b>
-						@if(payment.paymentType.toString() == "MonthlyFee") {Opłata miesięczna}
-						@if(payment.paymentType.toString() == "PenaltyForEquipmentDamage") {Opłata za uszkodzony sprzęt}
-						@if(payment.paymentType.toString() == "CourseCost") {Opłata za kurs}
-						@if(payment.paymentType.toString() == "Salary") {Wynagrodzenie}
-						
-					</b></a></td>
-					<td>
-						@if(payment.amount != null){@payment.amount} else{Nie określono}
-					</td>
-					<td>
-						@if(payment.paymentStatus.toString() == "WaitingForPayment") {Oczekiwanie na płatność}
-						@if(payment.paymentStatus.toString() == "NotPayed") {Nie zapłacone}
-						@if(payment.paymentStatus.toString() == "Payed") {Zapłacone}
-					</td>
-					
-					<td>
-						@for(user <- users){
-							@if(user._id == payment.user_id){
-								@user.toString()
-							}
-						}
-					
-					</td>
-					
-					
-					@if((session.get("role") == "SuperUser") || (session.get("role") == "PaymentManager")){
-					<td>
-					 		<a rel="tooltip" title="Edytuj płatność" href="@routes.Payments.editPayment(payment._id)">
-							<i class="glyphicon glyphicon-pencil"></i></a>
 
-					</td>
-					<td>
-					 		<a rel="tooltip" title="Usuń płatność" id="deletePayment" data-toggle="modal" data-target="#confirmModal" data-payment-id="@payment._id">
-							<i class="glyphicon glyphicon-remove"></i></a>	
-					</td>
-					}
-				</tr>
-			}
-			</tbody>
-		</table>
-		<br>
+
+	<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+	    <div class="modal-dialog">
+	        <div class="modal-content">
+	            <div class="modal-header">
+	            <h3 class="modal-title" id="myModalLabel">Ostrzeżenie o usunięciu płatności!</h3>
+	            </div>
+	            <div class="modal-body">
+	                <h5>Uwaga, usunięcie jest <b>nieodwracalne</b>!<br> Czy napewno chcesz <b>usunąć</b> płatność ?</h5>
+	            </div>
+	            <div class="modal-footer">
+	                <button type="button" class="btn btn-default" data-dismiss="modal">Anuluj</button>
+	                <a  id="deleteLink" href="#" class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i> Usuń płatność</a>
+	        </div>
+	    </div>
+	  </div>
 	</div>
+	
+	<script>
+		$('#confirmModal').on('show.bs.modal', function(e) {
+			var paymentId = "/payments/delete/"
+			paymentId += $(e.relatedTarget).data('payment-id')
+		    $(e.currentTarget).find('a[id="deleteLink"]').attr("href", paymentId)
+		});
+	</script>
 }
 
 <!--  @@Author(name="Lukas Pecak") -->
