--- a/app/views/payment/paymentsList.scala.html
+++ b/app/views/payment/paymentsList.scala.html
@@ -34,13 +34,13 @@
 			@for(payment <- payments) {
 				<tr>
 				
-					<td><a rel="tooltip" title="Edytuj płatność" href="@routes.Payments.editPayment(payment._id)"><b>
+					<!-- <td><a rel="tooltip" title="Edytuj płatność" href="@routes.Payments.editPayment(payment._id)"><b>
 						@if(payment.paymentType.toString() == "MonthlyFee") {Opłata miesięczna}
 						@if(payment.paymentType.toString() == "PenaltyForEquipmentDamage") {Opłata za uszkodzony sprzęt}
 						@if(payment.paymentType.toString() == "CourseCost") {Opłata za kurs}
 						@if(payment.paymentType.toString() == "Salary") {Wynagrodzenie}
 						
-					</b></a></td>
+					</b></a></td> -->
 					
 					<td>
 						@if(payment.amount != null){@payment.amount}else{Nie określono}
