--- a/app/views/payment/paymentsList.scala.html
+++ b/app/views/payment/paymentsList.scala.html
@@ -13,9 +13,9 @@
 		<table class="table table-striped">
 			<thead>
 				<tr>
-					<th>Tytuł</th>
+					<!-- <th>Tytuł</th> -->
 					<th>Kwota</th>
-					<th>Status</th>
+					<!-- <th>Status</th> -->
 					<th>Użytkownik</th>
 					@if((session.get("role") == "SuperUser") || (session.get("role") == "PaymentManager")){
 					<th>Zmień</th>
